Prevent clicking when review popup is up; fix star alignment

--- a/static/css/location.css
+++ b/static/css/location.css
@@ -102,7 +102,7 @@ body {
 }
 
 .review {
-    background-color: #CABFC5;
+    background-color: #ffffff;
     margin: 0.5rem 0.5rem;
     border: solid 3px black;
     border-radius: 5px;
@@ -126,3 +126,10 @@ body {
     margin-right: 0.5rem;
 }
 
+#fade-out-container {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 10;
+}
