--- a/static/css/reviewForm.css
+++ b/static/css/reviewForm.css
@@ -1,40 +1,34 @@
-#hideReviewForm{
+#hideReviewForm {
     display: none;
 }
 
-#modalForm{
+#modalForm {
     margin: 1em;
 }
-/* 
-    modal overall Style
-*/
-#modal{
+
+/* modal overall Style */
+#modal {
     position: fixed;
     top: 20%;
     right: 30%;
     max-width: 40%;
-    background-color: whitesmoke;
+    background-color: rgb(255, 255, 255);
     border: 2px solid #90EE90;
-    z-index: 1;
+    z-index: 9999;
 }
 
-
-
-
-/* 
-    tag style for review model
-*/
-.reviewTags{
+/* tag style for review model */
+.reviewTags {
     color: #ee9090;
 }
 
-
-
-/* 
-    Exit button style
-*/
+/* Exit button style */
 #modal .exitBtn {
     cursor: pointer;
+}
+
+.subtitle {
+    margin-bottom: 0.5em;
 }
 
 .g-custom {
@@ -48,32 +42,35 @@
     margin-right: 1em;
 }
 
+/* start rating styling */
 
-/* 
-    start rating styling
-*/
+.stars {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
 
+/* compensating for the way the floating stars are set up */
+/* since width: 1em below, we do -1em here so that it's still aligned */
+/* would prefer not to do this and use a diff way for the stars */
 .star-rate {
-    height: 36px;
-    display: inline-flex;
-    flex-direction: row-reverse;
-    align-items: flex-start;
-    justify-content: flex-end;
+    margin-left: -1em;
 }
 
 /*star label holder style*/
-.star-rate:not(:checked) > label {
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    float:right;
-    padding-left:1.5rem ;
-    width:1em;
-    font-size:40px;
-    color:var(--grey) ; /*empty star color*/
+.star-rate:not(:checked)>label {
+    overflow: hidden;
+    white-space: nowrap;
+    cursor: pointer;
+    float: right;
+    width: 1em;
+    font-size: 40px;
+    color: var(--grey);
+    /* empty star color */
 }
+
 /*star style*/
-.star-rate:not(:checked) > label::before {
+.star-rate:not(:checked)>label::before {
     content: '★ ';
     position: relative;
     padding-bottom: 0.5rem;
@@ -83,19 +80,19 @@
 remove input little circle
 found it here: https://stackoverflow.com/questions/34286322/remove-border-circle-from-radio-input
 */
-.star-rate > input{
+.star-rate>input {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
 }
 
 /* start color once checked */
-.star-rate > input:checked ~ label {
+.star-rate>input:checked~label {
     color: #FFD700;
 }
 
 /*star color when hovering over them*/
-.star-rate:not(:checked) > label:hover,
-.star-rate:not(:checked) > label:hover ~ label {
+.star-rate:not(:checked)>label:hover,
+.star-rate:not(:checked)>label:hover~label {
     color: #d3b71b;
 }
